fix :: spacing error

--- a/components/toast-notification.module.scss
+++ b/components/toast-notification.module.scss
@@ -1,4 +1,14 @@
 @use '../styles/mixins' as *;
+@use '../styles/variables' as *;
+
+$spacing: (
+        1: 4px,
+        2: 8px,
+        3: 12px,
+        4: 16px,
+        5: 20px,
+        6: 24px,
+);
 
 .toast {
   position: fixed;
